--- a/index(1).html
+++ b/index(1).html
@@ -47,7 +47,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>American Crossword Society Nationals 2024</td>
+                        <td><a href="index(3).html"> Crossword Society Nationals 2024</a></td>
                         <td><b>San Antonio, TX</b> UTSA Lecture Hall</td>
                         <td>7/12/2024, 8 AM - 9 AM</td>
                         <td>Free</td>
