--- a/index(3).html
+++ b/index(3).html
@@ -35,6 +35,9 @@
 
     <main>
         <center><p class="rizzy-gyaat-ohio"><b>American Crossword Society Nationals 2024</b> Results<p></center>
+            <center><section class="intro">
+                <button class="intro"><a href="html(5).html" style="font-family: 'DM Sans', sans-serif;">Return to Comp Page</a></button>
+            </section></center>
         <div class="table-wrapper">
             <div class="table-container">
                 <table class="content-table">
@@ -89,6 +92,7 @@
                             <td><b>Fran Reddy</b> (2019REDD02)</td>
                             <td><b>Mini</b> 18.29s</td>
                         </tr>
+                        
                     </tbody>
                 </table>
             </div>
@@ -121,9 +125,6 @@
                 </table>
             </div>
         </div>
-        <center><section class="intro">
-            <button class="intro"><a href="#" style="font-family: 'DM Sans', sans-serif;">See All Results...</a></button>
-        </section></center>
         <br>
     </main>
     
