--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="#">Daily</a></li>
                 <li><a href="#">Forums</a></li>
                 <li><a href="index(1).html">Tournaments</a></li>
-                <li><a href="#">ACS Live</a></li>
+                <li><a href="index(4).html">ACS Live</a></li>
                 <li><a href="#">Resources</a></li>
                 <li><a href="index(2).html">Sign In</a></li>
             </ul>
