--- a/index(6).html
+++ b/index(6).html
@@ -67,6 +67,7 @@
           Already a member? <a href="index(2).html">Login!</a>
         </div>
       </form>
+
         </div>
         </div>
         </center>
@@ -80,8 +81,7 @@
       }).then(
           response => response.json()
       ).then((html) => {
-        // you can put any JS code here
-        alert('success')
+        window.location.href = 'google.com';
       });
     });
     </script>
