--- a/index(1).html
+++ b/index(1).html
@@ -29,7 +29,7 @@
                 <li><a href="index(1).html">Tournaments</a></li>
                 <li><a href="#">ACS Live</a></li>
                 <li><a href="#">Resources</a></li>
-                <li><a href="index(2).html">Sign In</a></li>
+                <li><a href="login.php">Sign In</a></li>
             </ul>
         </nav>
     </header>
