--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section class="intro">
             <h1>Welcome to the American Crossword Society</h1>
             <p>Your ultimate destination for crossword enthusiasts.</p>
-            <button><a href="#">Play the Daily</a></button>
+            <button><a href="index(8).html">Play the Daily</a></button>
             <button><a href="index(1).html">Upcoming Tournaments</a></button>
             <h2>About</h2>
             <div class="uno">
